static/index.css
body {
  padding: 0px !important;
  margin: 0px !important;
  font-family: 'Monsterrat', sans-serif;
  background-image: url("http://pre12.deviantart.net/d041/th/pre/i/2011/097/c/8/the_great_and_powerful_pattern_by_purpletinker-d3dess3.png");
}

button {
  border-radius: 1em;
  height: 2em;
  background-color: #FAF99D;
  text-align: center;
  border: none;
  cursor: pointer;
  font-family: 'Monsterrat', sans-serif;
}

select {
  margin-top: 0.5em;
  border: 3px solid #82DDF4;
  background-color: #D8EEFB;
  border-radius: 1em;
  overflow: hidden;
  color: #338FCC;
}

a, a:visited {
  color: #23628C;
}

.mane {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  width: 80em;
  margin-left: auto;
  margin-right: auto;
}

.mane-header, .element-header, .mane-footer {
  border: 5px solid;
  border-color: #92CDF4;
  background-color: #B8E0F9;
  color: #338FCC;
}

.mane-header, .mane-footer {
  text-align: center;
  border-radius: 3em;
}

.mane-header {
  padding: 1em;
}

.mane-footer {
  padding: 1em;
}

.prim-header {
  font-size: 4em;
}

.sub-header {
  font-size: 2em;
}

.mane-element {
  background-color: #6CB2EA;
  min-height: 100vh;
  border: 5px solid #338FCC;
  border-radius: 3em;
}

.element-header {
  text-align: center;
  font-size: 3em;
}

.element-content {
  padding: 2em;
  padding-left: 6em;
  padding-right: 6em;
  color: #23628C;
}

.create-room-block {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
}

.create-room-block > select {
  text-align: center;
  font-size: 1.5em;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.create-room-block > button {
  margin-top: 0.5em;
  text-align: center;
  width: 10em;
  margin-left: auto;
  margin-right: auto;
  font-size: 1.5em;
}

.booster-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.booster-buttons > * {
  margin-top: 0.5em;
  margin-left: 0.5em;
  margin-right: 0.5em;
  width: 8em;
  font-size: 1.0em;
}

